======= Change History ========

--- Ver. 1.3.0 ---

- Removed support of Visual Studio 2003. To compile, use Visual Studio 2005 or later.

- Binary files now have version suffices (CrashRpt1300.dll, CrashRptProbe1300.dll and CrashSender1300.exe). This is
  to resolve problems of loading incorrect version of the DLL.

- Updated Italian lang file (thanks to ).


--- Ver. 1.2.10 ---

- Added new language files: German, Spanish, French, Hindi, Italian, Korean, Portuguese and Chinese Simplified.
  Some of these files were produced by professional translators (Korean, Chinese Simplified), but others
  are generated with help of an automated translation tool, so do not hesitate to report mistakes.

- Refactored unit tests, so now they support fixtures and execute faster then before.

- Added new test suites LangFileTests and CrproberTests.

- Fixed: Typo in HttpRequestSender.cpp (issue 79)

- Fixed: Typos in test project (issue 82)

- Fixed: Replace relative paths with OutDir and IntDir (issue 80)

- Fixed: MD5 files are not removed (issue 83)

- Fixed: CrashSender cannot properly send old reports (with smtp) (issue 84)

- Fixed: CrashSender manifest file prevents CrashSender from launching in x64 (issue 87)

--- Ver. 1.2.9 ---

- Compiler/linker output for x64 platform is now directed to bin\x64, while output dir for Win32 platform
  is the same (bin) (issue 77).

- Improved documentation (extended "Using CrashRpt API" and "An Example of Using API", "Writing Robust Code" sections)

- Annotated code with SAL macros and fixed some PREfast warnings (this should fix some potential stability and
  security issues).

- Fixed: Clarification for CR_INST_DONT_SEND_REPORT & CR_AF_TAKE_ORIGINAL_FILE

- Fixed: SVN/package file encoding strangeness (issue 76)

- Fixed: If I pass the short name for the path to crash report, it failed to create the directory (issue 78)


--- Ver. 1.2.8 ---

- Added JPEG library code from Independent Jpeg Group.
