@@ -108,188 +108,6 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 typedef BOOL (CALLBACK *LPGETLOGFILE) (__reserved LPVOID lpvState);
 
-#ifndef _CRASHRPT_REMOVE_DEPRECATED
-
-/*! \ingroup DeprecatedAPI
-*  \brief Installs exception handlers for the current process.
-*
-*  \param[in] pfnCallback Client crash callback.
-*  \param[in] pszEmailTo Email address to send crash report to.
-*  \param[in] pszEmailSubject Subject of the E-mail message.
-*
-*  \return Always returns NULL.
-*
-*  \deprecated
-*    This function is deprecated. It is still supported for compatiblity with
-*    older versions of CrashRpt, however consider using crInstall() function instead.
-*    This function is currently implemented as a wrapper for crInstall().    
-*
-*  \remarks
-*
-*    This function installs SEH exception filter for the caller process.
-*    It also installs various C++ exception/error handlers. For the list of handlers,
-*    please see crInstall().
-*
-*    \a pfnCallback defines the callback function that is called on crash. This parameter can be NULL.
-*
-*    \a pszEmailTo should be the valid email address of recipient. 
-*
-*    \a pszEmailSubject is the email subject. If this parameter is NULL, the default subject is 
-*    generated.
-*
-*    This function assumes that CrashSender.exe is located in the same directory as CrashRpt.dll loaded
-*    by the caller process. To specify different directory, use crInstall().
-*
-*    On crash, the error report is sent as E-mail message using address and subject passed to the
-*    function as \a pszEmailTo and \a pszEmailSubject parameters, respectively.
-*    
-*    InstallW() and InstallA() are wide-character and multibyte-character versions of Install(). 
-*    The Install() macro defines character set independent mapping for these functions. 
-* 
-*/
-
-CRASHRPTAPI(LPVOID)
-InstallW(
-         __in_opt LPGETLOGFILE pfnCallback,
-         LPCWSTR pszEmailTo,    
-         LPCWSTR pszEmailSubject
-         );
-
-/*! \ingroup DeprecatedAPI
-*  \copydoc InstallW()
-*/
-
-CRASHRPTAPI(LPVOID)
-InstallA(
-         __in_opt LPGETLOGFILE pfnCallback,
-         LPCSTR pszEmailTo,    
-         LPCSTR pszEmailSubject
-         );
-
-/*! \brief Character set-independent mapping of InstallW() and InstallA() functions. 
-*  \ingroup DeprecatedAPI
-*/
-#ifdef UNICODE
-#define Install InstallW 
-#else
-#define Install InstallA
-#endif //UNICODE
-
-
-/*! \ingroup DeprecatedAPI
-*  \brief Uninstalls the exception filters set up by Install().
-*
-*  \param[in] lpState State information returned from Install(), ignored and should be NULL.
-*
-*  \deprecated
-*    This function is deprecated. It is still supported for compatiblity with
-*    older versions of CrashRpt, however consider using crUninstall() function instead.
-*    This function is implemented as a wrapper for crUninstall().
-*
-*  \remarks
-*
-*    Call this function on application exit to uninstall all previously installed exception
-*    handlers.
-* 
-*/
-
-CRASHRPTAPI(void)
-Uninstall(
-          __reserved LPVOID lpState                            
-          );
-
-/*! \ingroup DeprecatedAPI 
-*  \brief Adds a file to the crash report.
-*  
-*  \param[in] lpState State information returned from Install(), ignored and should be NULL.
-*  \param[in] pszFile  Fully qualified file name.
-*  \param[in] pszDesc  Description of the file, used by the Error Report Details dialog.
-*
-*  \deprecated
-*    This function is deprecated. It is still supported for compatiblity with
-*    older versions of CrashRpt, however consider using crAddFile2() function instead.
-*    This function is implemented as a wrapper for crAddFile2().
-*
-*  \remarks
-*
-*    This function can be called anytime after Install() to add one or more
-*    files to the generated crash report. 
-*
-*    \a pszFile should be a valid absolute path of a file to add to crash report. 
-*
-*    \a pszDesc is a description of a file. It can be NULL.
-*
-*    Function fails if \a pszFile doesn't exist at the moment of function call.
-*
-*    AddFileW() and AddFileA() are wide-character and multibyte-character versions of AddFile(). 
-*    The AddFile() macro defines character set independent mapping for these functions. 
-*
-*/
-
-CRASHRPTAPI(void)
-AddFileW(
-         __reserved LPVOID lpState,                         
-         LPCWSTR pszFile,                         
-         LPCWSTR pszDesc                          
-         );
-
-/*! \ingroup DeprecatedAPI
-*
-*  \copydoc AddFileW()
-*/
-
-CRASHRPTAPI(void)
-AddFileA(
-         __reserved LPVOID lpState,                         
-         LPCSTR pszFile,                         
-         LPCSTR pszDesc                          
-         );
-
-/*! \brief Character set-independent mapping of AddFileW() and AddFileA() functions. 
-*  \ingroup DeprecatedAPI
-*/
-#ifdef UNICODE
-#define AddFile AddFileW
-#else
-#define AddFile AddFileA
-#endif //UNICODE
-
-
-
-/*! \ingroup DeprecatedAPI 
-*  \brief Generates the crash report.
-*  
-*  \param[in] lpState     State information returned from Install(), ignored and should be NULL.
-*  \param[in] pExInfo     Pointer to an EXCEPTION_POINTERS structure, can be NULL.
-* 
-*  \deprecated
-*    This function is deprecated. It is still supported for compatiblity with
-*    older versions of CrashRpt, however consider using crGenerateErrorReport() function instead.
-*    This function is implemented as a wrapper for crGenerateErrorReport().
-*
-*  \remarks
-*
-*    Call this function to manually generate a crash report.
-*
-*    The crash report contains the crash minidump, crash description in XML format and
-*    (optionally) additional files.
-*
-*    \a pExInfo defines the exception pointers for generating crash minidump file.
-*    If \a pExInfo is NULL, current CPU state is used to create exception pointers.
-*
-*    This function generates the error report and returns control to the caller. It doesn't
-*    terminate the caller process.
-*
-*/
-
-CRASHRPTAPI(void)
-GenerateErrorReport(
-                    __reserved LPVOID lpState,
-                    PEXCEPTION_POINTERS pExInfo
-                    );
-
-#endif //_CRASHRPT_REMOVE_DEPRECATED
-
 // Array indices for CR_INSTALL_INFO::uPriorities.
 #define CR_HTTP 0  //!< Send error report via HTTP (or HTTPS) connection.
 #define CR_SMTP 1  //!< Send error report via SMTP connection.
@@ -512,7 +330,7 @@ GenerateErrorReport(
 *   \b pszCustomSenderIcon [in, optional] 
 *
 *   Since v.1.2.8, this parameter can be used to define a custom icon for <i>Error Report</i> dialog. 
-*   The value of this parameter should be absolute address to the image containing the icon resource, followed by resource identifier separated by comma.
+*   The value of this parameter should be absolute path to the module containing the icon resource, followed by resource identifier separated by comma.
 *   You can set this parameter with NULL to use the default icon.
 *
 *   The resource identifier is a zero-based index of the icon to retrieve. For example, if this value is 0, the first icon in the specified file is used.
