@@ -45,73 +45,6 @@ HANDLE g_hModuleCrashRpt = NULL; // Handle to CrashRpt.dll module.
 CComAutoCriticalSection g_cs;    // Critical section for thread-safe accessing error messages.
 std::map<DWORD, CString> g_sErrorMsg; // Last error messages for each calling thread.
 
-CRASHRPTAPI(LPVOID) InstallW(LPGETLOGFILE pfnCallback, LPCWSTR pszEmailTo, LPCWSTR pszEmailSubject)
-{
-    // This is just a wrapper that calls crInstallW() function.
-
-    CR_INSTALL_INFOW info;
-    memset(&info, 0, sizeof(CR_INSTALL_INFO));
-    info.cb = sizeof(CR_INSTALL_INFO);
-    info.pfnCrashCallback = pfnCallback;
-    info.pszEmailTo = pszEmailTo;
-    info.pszEmailSubject = pszEmailSubject;
-
-    crInstallW(&info);
-
-    return NULL;
-}
-
-CRASHRPTAPI(LPVOID) InstallA(LPGETLOGFILE pfnCallback, LPCSTR pszEmailTo, LPCSTR pszEmailSubject)
-{
-    // This is just a wrapper that calls crInstallA() function.
-
-    strconv_t strconv;
-    LPCWSTR lpwszEmailTo = strconv.a2w(pszEmailTo);
-    LPCWSTR lpwszEmailSubject = strconv.a2w(pszEmailSubject);
-
-    return InstallW(pfnCallback, lpwszEmailTo, lpwszEmailSubject);
-}
-
-CRASHRPTAPI(void) Uninstall(LPVOID lpState)
-{
-    // This is just a wrapper that calls crInstall() function.
-
-    lpState;
-    crUninstall();  
-}
-
-CRASHRPTAPI(void) AddFileW(LPVOID lpState, LPCWSTR lpFile, LPCWSTR lpDesc)
-{ 
-    // This is just a wrapper that calls crAddFileW() function.
-
-    lpState;
-    crAddFileW(lpFile, lpDesc);
-}
-
-CRASHRPTAPI(void) AddFileA(LPVOID lpState, LPCSTR lpFile, LPCSTR lpDesc)
-{
-    // This is just a wrapper that calls crAddFileA() function.
-
-    strconv_t strconv;
-    LPCWSTR lpwszFile = strconv.a2w(lpFile);
-    LPCWSTR lpwszDesc = strconv.a2w(lpDesc);
-    AddFileW(lpState, lpwszFile, lpwszDesc);
-}
-
-CRASHRPTAPI(void) GenerateErrorReport(LPVOID lpState, PEXCEPTION_POINTERS pExInfo)
-{
-    // This is just a wrapper that calls crGenerateErrorReport() function.
-    lpState;
-
-    CR_EXCEPTION_INFO ei;
-    memset(&ei, 0, sizeof(CR_EXCEPTION_INFO));
-    ei.cb = sizeof(CR_EXCEPTION_INFO);
-    ei.exctype = CR_SEH_EXCEPTION;
-    ei.pexcptrs = pExInfo;
-
-    crGenerateErrorReport(&ei);
-}
-
 CRASHRPTAPI(int) crInstallW(CR_INSTALL_INFOW* pInfo)
 {
     int nStatus = -1;
